@@ -1,3 +1,8 @@
+2010-04-26  Albrecht Dreß
+
+	* libbalsa/rfc3156.c (libbalsa_check_crypto_engine): add hint
+	about failed test for CMS protocol.
+
 2010-04-11  Albrecht Dreß
 
 	* libbalsa/filter.c (libbalsa_filter_mailbox_messages): build on
